git commit -m "change some file"

--- a/details8.html
+++ b/details8.html
@@ -380,7 +380,7 @@
               <div class="products-details">
                 <div class="preview_image">
                   <div class="preview-small">
-                    <img id="zoom_03" src="images/products/medium/products-07.png" data-zoom-image="images/products/Large/products-02.png" alt="">
+                    <img id="zoom_03" src="images/products/medium/products-08.png" data-zoom-image="images/products/Large/products-02.png" alt="">
                   </div>
                   <div class="thum-image">
                     <ul id="gallery_01" class="prev-thum">
@@ -422,7 +422,7 @@
                 </div>
                 <div class="products-description">
                   <h5 class="name">
-                    FORZA Collagen Beauty (Hộp 1 vỉ x 15 viên nang)
+                    Ultra Performing (Hộp 10 cái)
 
                   </h5>
                   <p>
@@ -438,17 +438,16 @@
                     </span>
                   </p>
                   <p>
-                    Viên nghệ Procumin-E có thành phần nano curcumin hỗ trợ chống oxy hóa, bảo vệ niêm mạc dạ dày, tá tràng, hỗ trợ bảo vệ gan, giảm nguy cơ mắc bệnh về u bướu do các gốc tự do gây ra.               
-                    <div class="price">
+                    Bao cao su Pharmacity Ultra Performing được sản xuất dựa trên công nghệ tiên tiến của Đức. Với độ co giãn linh hoạt và ôm sát vừa vặn, cùng với thiết kế gân gai và chất gây tê, sản phẩm mang lại cho các cặp đôi cảm giác chân thật và thăng hoa cảm xúc dài lâu.                    <div class="price">
                     Giá : 
                     <span class="new_price">
-                      100.000
+                      125.000
                       <sup>
                         VNĐ
                       </sup>
                     </span>
                     <span class="old_price">
-                      105.000
+                      145.000
                       <sup>
                         VNĐ
                       </sup>
@@ -513,24 +512,17 @@
                 <div class="tab-content-wrap">
                   <div class="tab-content" id="Descraption">
                     <p>
-                      Đối tượng sử dụng
-                              Người bị viêm loét dạ dày, hành tá tràng.
-                              Người đang trong quá trình làm lành vết thương, phục hồi sau mổ.
-                              Người đang và sau quá trình hóa trị hoặc xạ trị.
-                              Phụ nữ sau khi sinh.
+                        Thành phần: Mủ cao su thiên nhiên, chất bôi trơn có chứa Benzocaine 5% giúp kéo dài sự hưng phấn.
 
-                              Thành phần
-                              Nano curcumin, Piperine, Polyethylene glycol vừa đủ 1 viên.                      
+                        Kích thước: Bề rộng 50mm ± 2mm                    
                     <p>
-                      Công dụng
-                        Hỗ trợ chống oxy hóa, bảo vệ niêm mạc dạ dày, tá tràng, hỗ trợ bảo vệ gan, giảm nguy cơ mắc bệnh về u bướu do các gốc tự do gây ra.
-
-                        Hướng dẫn sử dụng
-                        Uống trước khi ăn 30 phút hoặc sau khi ăn 1 tiếng.
-                        Uống 1-2 viên/lần, ngày uống 2 lần.
-
-                        Bảo quản: Để nơi khô mát, tránh ánh sáng mặt trời và xa tầm tay trẻ em.     
-                        </p>
+                        Hướng dẫn sử dụng:
+                        Xé một bên gói, tránh làm rách bao cao su bên trong.
+                        Mang bao cao su vào khi dương vật đang cương.
+                        Đặt bao cao su trùm lên đầu dương vật với vòng cuốn bên ngoài. Dùng tay bóp cuốn cao su sao cho không khí bị đẩy hết ra bên ngoài. Dùng tay còn lại để tuột vòng cuốn theo chiều dài dương vật.
+                        Sau khi xuất tinh, giữ chặt bao cao su, tháo bao cao su khỏi dương vật. Gói lại và bỏ vào thùng rác.
+                        
+                        Lưu ý: Sản phẩm chỉ dùng 1 lần. Nếu bị kích ứng, nóng, rát, mẩn ngứa, vui lòng ngưng sử dụng và hỏi ý kiến bác sĩ.
                   </div>
                   <div class="tab-content" id="Reviews">
                     <form>
