--- a/cart.html
+++ b/cart.html
@@ -84,7 +84,7 @@
                       </li>
                       <li>
                         <a href="register.html" class="reg">
-                          Đăng kí
+                          Đăng ký
                         </a>
                       </li>
                     </ul>
