--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                        </div>
                                        <div class="right">
                                           <p class="price">300.000 VNĐ</p>
-                                          <a href="#" class="remove"><img src="images/remove.png" alt="remove"></a>
+                                          <a href="#" class="remove" onclick="this.parentElement.parentElement.remove();"><img src="images/remove.png" alt="remove"></a>
                                        </div>
                                     </div>
                                  </li>
@@ -78,7 +78,7 @@
                                        </div>
                                        <div class="right">
                                           <p class="price">300.000 VNĐ</p>
-                                          <a href="#" class="remove"><img src="images/remove.png" alt="remove"></a>
+                                          <a href="#" class="remove" onclick="this.parentElement.parentElement.remove();"><img src="images/remove.png" alt="remove"></a>
                                        </div>
                                     </div>
                                  </li>
