git commit -m "change some file"

--- a/details.html
+++ b/details.html
@@ -437,6 +437,12 @@
                     </span>
                   </p>
                   <p>
+                    Mã sản phẩm: 
+                    <span class=" light-red">
+                      1101
+                      </span>
+                  </p>
+                  <p>
                     Thực phẩm bảo vệ sức khỏe Oyster Plus – Goodhealth hỗ trợ tăng cường sinh lực, miễn dịch cho nam giới, giúp cánh đàn ông có sức khỏe cường tráng và luôn phong độ, bản lĩnh.
                   </p>
                   <hr class="border">
