--- a/details2.html
+++ b/details2.html
@@ -437,6 +437,12 @@
                     </span>
                   </p>
                   <p>
+                    Mã sản phẩm: 
+                    <span class=" light-red">
+                      1102
+                      </span>
+                  </p>
+                  <p>
                     Thực phẩm chức năng tăng cường sức khỏe cho phụ nữ mang thai Pregnacare Plus Omega 3 Vitabiotics giúp bổ sung vitamin và khoáng chất, giúp tăng cường sức khỏe, nâng cao thể trạng ở phụ nữ mang thai và cho con bú.
                   </p>
                   <hr class="border">
