--- a/details3.html
+++ b/details3.html
@@ -437,6 +437,12 @@
                     </span>
                   </p>
                   <p>
+                    Mã sản phẩm: 
+                    <span class=" light-red">
+                      1103
+                      </span>
+                  </p>
+                  <p>
                     Sữa dưỡng thể dưỡng trắng giúp phục hồi & chống nắng Nivea Extra White SPF30 với công thức được tăng cường chỉ số chống nắng SPF30 giúp bảo vệ làn da khỏi tác hại của ánh nắng mặt trời, ngăn ngừa tình trạng đen sạm da. Đặc biệt, thành phần sữa dưỡng thể chứa chiết xuất từ quả Camu Camu, có hàm lượng Vitamin C gấp 50 lần so với quả chanh, góp phần phục hồi và dưỡng trắng da từ sâu bên trong.                  </p>
                   <hr class="border">
                   <div class="price">
