--- a/details4.html
+++ b/details4.html
@@ -437,6 +437,12 @@
                     </span>
                   </p>
                   <p>
+                    Mã sản phẩm: 
+                    <span class=" light-red">
+                      1104
+                      </span>
+                  </p>
+                  <p>
                     Viên đông trùng hạ thảo Wellness Nutrition được sản xuất và đóng gói tại Mỹ với dây chuyền sản xuất khép kín theo công nghệ chiết xuất cao cấp mới đảm bảo giữ được 100% hoạt tính Đông Trùng Hạ Thảo Sinensis (loài có công hiệu tốt nhất của Đông Trùng Hạ Thảo).                  <hr class="border">
                   <div class="price">
                     Giá : 
