--- a/details5.html
+++ b/details5.html
@@ -437,6 +437,12 @@
                     </span>
                   </p>
                   <p>
+                    Mã sản phẩm: 
+                    <span class=" light-red">
+                      1105
+                      </span>
+                  </p>
+                  <p>
                     Dầu gội sạch gàu siêu mát lạnh Head & Shoulders với công thức đặc biệt, mang đến cảm giác mát lạnh với -5°C, cho da đầu sạch gàu, hết ngứa.                  <div class="price">
                     Giá : 
                     <span class="new_price">
