--- a/details6.html
+++ b/details6.html
@@ -438,6 +438,12 @@
                     </span>
                   </p>
                   <p>
+                    Mã sản phẩm: 
+                    <span class=" light-red">
+                      1106
+                      </span>
+                  </p>
+                  <p>
                     Viên nghệ Procumin-E có thành phần nano curcumin hỗ trợ chống oxy hóa, bảo vệ niêm mạc dạ dày, tá tràng, hỗ trợ bảo vệ gan, giảm nguy cơ mắc bệnh về u bướu do các gốc tự do gây ra.               
                     <div class="price">
                     Giá : 
