--- a/details8.html
+++ b/details8.html
@@ -438,6 +438,12 @@
                     </span>
                   </p>
                   <p>
+                    Mã sản phẩm: 
+                    <span class=" light-red">
+                      1108
+                      </span>
+                  </p>
+                  <p>
                     Bao cao su Pharmacity Ultra Performing được sản xuất dựa trên công nghệ tiên tiến của Đức. Với độ co giãn linh hoạt và ôm sát vừa vặn, cùng với thiết kế gân gai và chất gây tê, sản phẩm mang lại cho các cặp đôi cảm giác chân thật và thăng hoa cảm xúc dài lâu.                    <div class="price">
                     Giá : 
                     <span class="new_price">
