--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <!--[if lt IE 9]><script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script><script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script><![endif]-->
    </head>
    <body id="home">
-      <div class="wrapper">
-         <div class="header">
+      <div class="wrapper" style="margin-top: 100px;">
+         <div class="header">    
             <div class="container">
                <div class="row">
                   <div class="col-md-2 col-sm-2">
@@ -65,7 +65,7 @@
                                        </div>
                                        <div class="right">
                                           <p class="price">300.000 VNĐ</p>
-                                          <a href="#" class="remove" onclick="this.parentElement.parentElement.remove();"><img src="images/remove.png" alt="remove"></a>
+                                          <a href="#" class="remove"><img src="images/remove.png" alt="remove"></a>
                                        </div>
                                     </div>
                                  </li>
@@ -78,7 +78,7 @@
                                        </div>
                                        <div class="right">
                                           <p class="price">300.000 VNĐ</p>
-                                          <a href="#" class="remove" onclick="this.parentElement.parentElement.remove();"><img src="images/remove.png" alt="remove"></a>
+                                          <a href="#" class="remove"><img src="images/remove.png" alt="remove"></a>
                                        </div>
                                     </div>
                                  </li>
@@ -151,6 +151,7 @@
                            <p>Chung tay bảo vệ sức khỏe cho cả gia đình bạn.</p>
                         </div>
                         <div class="flat-button caption4 formLeft delay600 text-center"><a class="more" href="#">More Details</a></div>
+                       
                         <div class="flat-image formBottom delay200" data-duration="5" data-bottom="true"><img src="images/slider-image-01.png" alt=""></div>
                      </li>
                      <li>
