--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <link href="css/sequence-looptheme.css" rel="stylesheet" media="all"/>
       <link href="css/style.css" rel="stylesheet">
       <!--[if lt IE 9]><script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script><script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script><![endif]-->
+      
    </head>
    <body id="home">
       <div class="wrapper">
@@ -53,8 +54,8 @@
                            <li id="search" class="search">
                               <form><input class="search-submit" type="submit" value=""><input class="search-input" placeholder="Enter your search term..." type="text" value="" name="search"></form>
                            </li>
-                           <li class="option-cart">
-                              <a href="#" class="cart-icon">cart <span class="cart_no">02</span></a>
+                           <li class="option-cart" onmouseover="updateCart()">
+                              <a href="#" class="cart-icon">cart <span class="cart_no">0</span></a>
                               <ul class="option-cart-item">
                                  <li>
                                     <div class="cart-item">
@@ -65,7 +66,7 @@
                                        </div>
                                        <div class="right">
                                           <p class="price">300.000 VNĐ</p>
-                                          <a href="#" class="remove" onclick="this.parentElement.parentElement.remove();"><img src="images/remove.png" alt="remove"></a>
+                                          <a href="#" class="remove" onclick="this.parentElement.parentElement.parentElement.remove();alert('đã xoá item');"><img src="images/remove.png" alt="remove"></a>
                                        </div>
                                     </div>
                                  </li>
@@ -77,12 +78,12 @@
                                           <p>Size: <span class="light-red">One size</span><br>Quantity: <span class="light-red">01</span></p>
                                        </div>
                                        <div class="right">
-                                          <p class="price">300.000 VNĐ</p>
-                                          <a href="#" class="remove" onclick="this.parentElement.parentElement.remove();"><img src="images/remove.png" alt="remove"></a>
+                                          <p class="price" >300.000 VNĐ</p>
+                                          <a href="#" class="remove" onclick="this.parentElement.parentElement.parentElement.remove();"><img src="images/remove.png" alt="remove"></a>
                                        </div>
                                     </div>
                                  </li>
-                                 <li><span class="total">Total <strong>600.000 VNĐ</strong></span><button class="checkout" onClick="location.href='checkout.html'">CheckOut</button></li>
+                                 <li><span class="total">Total <strong >600.000 VNĐ</strong></span><button class="checkout" onClick="location.href='checkout.html'">CheckOut</button></li>
                               </ul>
                            </li>
                         </ul>
@@ -486,5 +487,6 @@
 	  <script type="text/javascript" src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
 	  <script defer src="js/jquery.flexslider.js"></script>
 	  <script type="text/javascript" src="js/script.min.js" ></script>
+     <script type="text/javascript" src="js/cart.js"></script>
    </body>
 </html>
