--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                            <li id="search" class="search">
                               <form><input class="search-submit" type="submit" value=""><input class="search-input" placeholder="Enter your search term..." type="text" value="" name="search"></form>
                            </li>
-                           <li class="option-cart" onmouseover="updateCart()">
+                           <li class="option-cart" onmouseover="updateCart();updatePrice()">
                               <a href="#" class="cart-icon">cart <span class="cart_no">0</span></a>
                               <ul class="option-cart-item">
                                  <li>
