--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       <link href="css/sequence-looptheme.css" rel="stylesheet" media="all"/>
       <link href="css/style.css" rel="stylesheet">
       <!--[if lt IE 9]><script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script><script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script><![endif]-->
-      
    </head>
    <body id="home">
       <div class="wrapper" style="margin-top: 100px;">
@@ -54,7 +53,7 @@
                            <li id="search" class="search">
                               <form><input class="search-submit" type="submit" value=""><input class="search-input" placeholder="Enter your search term..." type="text" value="" name="search"></form>
                            </li>
-                           <li class="option-cart" onmouseover="updateCart();updatePrice()">
+                           <li class="option-cart" onmouseover="updateCart()">
                               <a href="#" class="cart-icon">cart <span class="cart_no">0</span></a>
                               <ul class="option-cart-item">
                                  <li>
@@ -66,11 +65,7 @@
                                        </div>
                                        <div class="right">
                                           <p class="price">300.000 VNĐ</p>
-<<<<<<< HEAD
-                                          <a href="#" class="remove"><img src="images/remove.png" alt="remove"></a>
-=======
                                           <a href="#" class="remove" onclick="this.parentElement.parentElement.parentElement.remove();alert('đã xoá item');"><img src="images/remove.png" alt="remove"></a>
->>>>>>> 37d7c98761e144c1dfcb70e5f806e2602e17bec5
                                        </div>
                                     </div>
                                  </li>
@@ -82,13 +77,8 @@
                                           <p>Size: <span class="light-red">One size</span><br>Quantity: <span class="light-red">01</span></p>
                                        </div>
                                        <div class="right">
-<<<<<<< HEAD
-                                          <p class="price">300.000 VNĐ</p>
-                                          <a href="#" class="remove"><img src="images/remove.png" alt="remove"></a>
-=======
                                           <p class="price" >300.000 VNĐ</p>
                                           <a href="#" class="remove" onclick="this.parentElement.parentElement.parentElement.remove();"><img src="images/remove.png" alt="remove"></a>
->>>>>>> 37d7c98761e144c1dfcb70e5f806e2602e17bec5
                                        </div>
                                     </div>
                                  </li>
