--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
          <div class="container_fullwidth">
             <div class="container">
                <div class="hot-products">
-                  <h3 class="title"><strong>Đề</strong> Xuất</h3>
+                  <h3 class="title"><strong>Đề Xuất</strong> </h3>
                   <div class="control"><a id="prev_hot" class="prev" href="#">&lt;</a><a id="next_hot" class="next" href="#">&gt;</a></div>
                   <ul id="hot">
                      <li>
@@ -216,7 +216,7 @@
                               <div class="products">
                                  <div class="thumbnail"><a href="details2.html"><img src="images/products/small/products-04.png" alt="Product Name"></a></div>
                                  <div class="productname">Sản phẩm 2021</div>
-                                 <h4 class="price">577.000VNĐ</h4>
+                                 <h4 class="price">577.000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
                            </div>
@@ -225,7 +225,7 @@
                                  <div class="offer">New</div>
                                  <div class="thumbnail"><a href="details3.html"><img src="images/products/small/products-02.png" alt="Product Name"></a></div>
                                  <div class="productname">Sản phẩm 2021</div>
-                                 <h4 class="price">135.000 VNĐ</h4>
+                                 <h4 class="price">135.000 VND</h4>
                                  <div class="button_group"><button class="button add-cart" type="button">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
                            </div>
