--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                            </div>
                            <div class="col-md-3">
                               <ul class="usermenu">
-                                 <li><a href="login.html" class="log">Đăng nhập</a></li>
+                                 <li><a href="#" class="log" class="option-cart-item" onclick="loginWindow()">Đăng nhập</a></li>
                                  <li><a href="register.html" class="reg">Đăng kí</a></li>
                               </ul>
                            </div>
@@ -180,7 +180,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-01.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>dầu ăn con cét</div>
                                  <h4 class="price">415000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
@@ -188,7 +188,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details2.html"><img src="images/products/small/products-04.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>sữa tắm "Em tắm anh yêu"</div>
                                  <h4 class="price">577000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
@@ -196,7 +196,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details3.html"><img src="images/products/small/products-02.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>Mì xào bò</div>
                                  <h4 class="price">135000 VND</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
@@ -204,7 +204,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details4.html"><img src="images/products/small/products-03.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>Sữa matcha hương socola</div>
                                  <h4 class="price">250000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
@@ -216,7 +216,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details5.html"><img src="images/products/small/products-05.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>Đường tinh luyện</div>
                                  <h4 class="price">100000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
@@ -224,7 +224,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details6.html"><img src="images/products/small/products-06.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>Honda</div>
                                  <h4 class="price">300000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
@@ -232,7 +232,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details7.html"><img src="images/products/small/products-07.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>Xiaomi note 10</div>
                                  <h4 class="price">320000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
@@ -240,7 +240,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details8.html"><img src="images/products/small/products-08.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>Dép kẹp</div>
                                  <h4 class="price">167000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
@@ -259,7 +259,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-09.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>Thạch cao</div>
                                  <h4 class="price">400000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
@@ -267,7 +267,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-10.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>Thịt bò</div>
                                  <h4 class="price">312000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
@@ -275,7 +275,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-11.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>Cao su</div>
                                  <h4 class="price">505000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
@@ -283,7 +283,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-12.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>Bút bi</div>
                                  <h4 class="price">910000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
@@ -295,7 +295,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-13.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>ACK</div>
                                  <h4 class="price">168000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
@@ -303,7 +303,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-14.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>firewall</div>
                                  <h4 class="price">50000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
@@ -311,7 +311,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-15.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>clgt</div>
                                  <h4 class="price">760000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
@@ -319,7 +319,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-16.png" alt="Product Name"></a></div>
-                                 <div class="productname"></br></br>Sản phẩm 2021</div>
+                                 <div class="productname"></br></br>ngáo</div>
                                  <h4 class="price">56000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button" onclick="addToCart(this);updateCart();">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
                               </div>
